--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -5,6 +5,9 @@ description = "Critiquely CLI"
 requires-python = ">=3.13"
 dependencies = [
     "click>=8.1.8",
+    "langchain[anthropic,openai]>=0.3.25",
+    "langgraph>=0.4.7",
+    "pygithub>=2.6.1",
 ]
 
 [project.scripts]
