--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,6 +3,11 @@
     push:
       branches:
         - main
+  env:
+    AWS_REGION : eu-west-2
+  permissions:
+      id-token: write
+      contents: read
   jobs:
     Build:
       name: Build
@@ -11,12 +16,12 @@
         - name: Checkout
           uses: actions/checkout@v2
 
-        - name: Configure AWS credentials
-          uses: aws-actions/configure-aws-credentials@v1
+        - name: configure aws credentials
+          uses: aws-actions/configure-aws-credentials@v1.7.0
           with:
-            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws-region: ap-south-1
+            role-to-assume: arn:aws:iam::443170140241:role/github_oidc
+            role-session-name: GitHub_to_AWS_via_FederatedOIDC
+            aws-region: ${{ env.AWS_REGION }}
 
         - name: Login to Amazon ECR
           id: login-ecr
