--- a/.github/workflows/pulumi_push.yaml
+++ b/.github/workflows/pulumi_push.yaml
@@ -32,6 +32,8 @@ jobs:
       - name: install requirements.txt
         working-directory: ./infrastructure
         run: uv pip install -r requirements.txt
+        env:
+          UV_SYSTEM_PYTHON: 1
       - uses: pulumi/actions@v6
         with:
           command: up
