--- a/.github/workflows/pulumi_push.yaml
+++ b/.github/workflows/pulumi_push.yaml
@@ -2,7 +2,7 @@ name: Pulumi
 on:
   push:
     branches:
-      - ci/pulumi-push
+      - main
 
 env:
   AWS_REGION : eu-west-2
@@ -17,8 +17,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
       - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
@@ -29,12 +27,9 @@ jobs:
           role-to-assume: arn:aws:iam::443170140241:role/github_oidc
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: ${{ env.AWS_REGION }}
-      - name: Install Venv
-        working-directory: ./infrastructure
-        run: uv venv
       - name: install requirements.txt
         working-directory: ./infrastructure
-        run: uv pip install -r requirements.txt
+        run: pip install -r requirements.txt
       - uses: pulumi/actions@v6
         with:
           command: up
