--- a/.github/workflows/pulumi_push.yaml
+++ b/.github/workflows/pulumi_push.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
-          python-version: 3.13
+          python-version-file: ".python-version"
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1.7.0
         with:
