--- a/.github/workflows/pulumi_pr.yaml
+++ b/.github/workflows/pulumi_pr.yaml
@@ -1,4 +1,4 @@
-name: Pulumi
+name: Pulumi - PR
 on:
   - pull_request
 
@@ -8,6 +8,7 @@ env:
 permissions:
   id-token: write
   contents: read
+  pull-requests: write
 
 jobs:
   update:
