--- a/infrastructure/requirements.txt
+++ b/infrastructure/requirements.txt
@@ -1,2 +1,3 @@
-pulumi>=3.0.0,<4.0.0
-pulumi-aws>=6.0.2,<7.0.0
+pulumi==3.172.0a1747926196
+pulumi-aws==6.82.0a1748002004
+pulumi-aws-apigateway==2.6.2
