--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "langgraph>=0.4.7",
     "mangum>=0.19.0",
     "pygithub>=2.6.1",
+    "fastapi>=0.115.12",
+    "unidiff>=0.7.5"
 ]
 
 [dependency-groups]
