--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -5,6 +5,7 @@ description = "Critiquely CLI"
 requires-python = ">=3.13"
 dependencies = [
     "click>=8.1.8",
+    "langchain-mcp-adapters>=0.1.4",
     "langchain[anthropic,openai]>=0.3.25",
     "langgraph>=0.4.7",
     "pygithub>=2.6.1",
