--- a/.github/workflows/pulumi_pr.yaml
+++ b/.github/workflows/pulumi_pr.yaml
@@ -37,7 +37,7 @@ jobs:
       - uses: pulumi/actions@v6
         with:
           command: preview
-          stack-name: critiquely/critique-engine/dev
+          stack-name: critiquely/cli/prod
           work-dir: ./infrastructure
           comment-on-pr: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
