--- a/.github/workflows/pulumi_push.yaml
+++ b/.github/workflows/pulumi_push.yaml
@@ -29,12 +29,9 @@ jobs:
           role-to-assume: arn:aws:iam::443170140241:role/github_oidc
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: ${{ env.AWS_REGION }}
-      - name: Create Python virtual environment
-        working-directory: ./infrastructure
-        run: uv venv
       - name: Install Python dependencies
         working-directory: ./infrastructure
-        run: uv pip install -r requirements.txt
+        run: pulumi install 
       - uses: pulumi/actions@v6
         with:
           command: up
