--- a/.github/workflows/pulumi_push.yaml
+++ b/.github/workflows/pulumi_push.yaml
@@ -30,12 +30,12 @@ jobs:
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: ${{ env.AWS_REGION }}
       - name: Install Python dependencies
-        working-directory: ./infrastructure
+        working-directory: ./infrastructure/src
         run: pulumi install 
       - uses: pulumi/actions@v6
         with:
           command: up
           stack-name: critiquely/cli/prod
-          work-dir: ./infrastructure
+          work-dir: ./infrastructure/src
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
