--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -1,7 +1,8 @@
 [project]
-name = "src"
+name = "critiquely"
 version = "1.0.0"
-description = "Critiquely CLI"
+description = "Critiquely - Code review application with CLI and queue processing modes"
+authors = [{name = "Critiquely", email = "hello@critiquely.com"}]
 requires-python = ">=3.13"
 dependencies = [
     "arxiv>=2.2.0",
@@ -19,10 +20,13 @@ dependencies = [
     "pillow>=11.2.1",
     "pygithub>=2.6.1",
     "wikipedia>=1.4.0",
+    "pika>=1.3.2",
+    "pydantic>=2.5.0",
+    "pydantic-settings>=2.0.0",
 ]
 
 [project.scripts]
-critiquely = "src.main:cli"
+critiquely = "src.main:main"
 
 
 [build-system]
@@ -34,6 +38,9 @@ dev = [
     "black>=25.1.0",
     "pylint>=3.3.7",
 ]
+
+[tool.flit.module]
+name = "src"
 
 [tool.black]
 line-length = 88
