--- a/.github/workflows/pulumi_push.yaml
+++ b/.github/workflows/pulumi_push.yaml
@@ -35,7 +35,7 @@ jobs:
       - uses: pulumi/actions@v6
         with:
           command: up
-          stack-name: critiquely/cli/prod
+          stack-name: critiquely/critiquely/dev
           work-dir: ./infrastructure/src
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
