--- a/receiver/Dockerfile
+++ b/receiver/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.12-slim
+FROM python:3.13-slim
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
 # Change the working directory to the `app` directory
@@ -6,18 +6,11 @@ WORKDIR /app
 
 RUN ls
 
-# Install dependencies
-RUN --mount=type=cache,target=/root/.cache/uv \
-    --mount=type=bind,source=receiver/uv.lock,target=uv.lock \
-    --mount=type=bind,source=receiver/pyproject.toml,target=pyproject.toml \
-    uv sync --frozen --no-install-project
-
 # Copy the project into the image
 COPY . ./
 
 # Sync the project
-RUN --mount=type=cache,target=/root/.cache/uv \
-    uv sync --frozen
+RUN uv sync --locked
 
 # Run with uvicorn
 CMD ["uv", "run", "uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
