--- a/.github/workflows/build-receiver.yaml
+++ b/.github/workflows/build-receiver.yaml
@@ -3,11 +3,10 @@
     push:
       branches:
         - main
-  env:
-    AWS_REGION : eu-west-2
   permissions:
       id-token: write
       contents: read
+      packages: write
   jobs:
     Build:
       name: Build
@@ -16,31 +15,25 @@
         - name: Checkout
           uses: actions/checkout@v2
 
-        - name: configure aws credentials
-          uses: aws-actions/configure-aws-credentials@v1.7.0
+        - name: Login to GitHub Container Registry
+          uses: docker/login-action@v3
           with:
-            role-to-assume: arn:aws:iam::443170140241:role/github_oidc
-            role-session-name: GitHub_to_AWS_via_FederatedOIDC
-            aws-region: ${{ env.AWS_REGION }}
-
-        - name: Login to Amazon ECR
-          id: login-ecr
-          uses: aws-actions/amazon-ecr-login@v1
+            registry: ghcr.io
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
 
         - name: Get commit hash
           id: get-commit-hash
           run: echo "::set-output name=commit-hash::$(git rev-parse --short HEAD)"
-        - name: Get timestamp
-          id: get-timestamp
-          run: echo "::set-output name=timestamp::$(date +'%Y-%m-%d-%H-%M')"
 
-        - name: Build, tag, and push the image to Amazon ECR
+        - name: Build, tag, and push the image to GitHub Container Registry
           id: build-image
           working-directory: ./receiver
           env:
-            ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-            ECR_REPOSITORY: critiquely-receiver
-            IMAGE_TAG: ${{ steps.get-commit-hash.outputs.commit-hash }}-${{ steps.get-timestamp.outputs.timestamp }}
+            GHCR_REGISTRY: ghcr.io
+            GHCR_REPOSITORY: ${{ github.repository }}/receiver
+            IMAGE_TAG: ${{ steps.get-commit-hash.outputs.commit-hash }}
           run: |
-            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
-            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            docker build -t $GHCR_REGISTRY/$GHCR_REPOSITORY:$IMAGE_TAG -t $GHCR_REGISTRY/$GHCR_REPOSITORY:latest .
+            docker push $GHCR_REGISTRY/$GHCR_REPOSITORY:$IMAGE_TAG
+            docker push $GHCR_REGISTRY/$GHCR_REPOSITORY:latest
