--- a/.github/workflows/build-processor.yaml
+++ b/.github/workflows/build-processor.yaml
@@ -25,13 +25,17 @@
         - name: Get commit hash
           id: get-commit-hash
           run: echo "::set-output name=commit-hash::$(git rev-parse --short HEAD)"
+        
+        - name: Make Repository Var Lowercase
+          run: |
+            echo "repository_lowercase=${{ github.repository }}" >>${GITHUB_ENV}
 
         - name: Build, tag, and push the image to GitHub Container Registry
           id: build-image
           working-directory: ./processor
           env:
             GHCR_REGISTRY: ghcr.io
-            GHCR_REPOSITORY: ${{ github.repository }}/processor
+            GHCR_REPOSITORY: ${{ env.repository_lowercase }}/processor
             IMAGE_TAG: ${{ steps.get-commit-hash.outputs.commit-hash }}
           run: |
             docker build -t $GHCR_REGISTRY/$GHCR_REPOSITORY:$IMAGE_TAG -t $GHCR_REGISTRY/$GHCR_REPOSITORY:latest .
