allow insecure images

--- a/charts/critiquely/values.yaml
+++ b/charts/critiquely/values.yaml
@@ -1,4 +1,8 @@
 # Global configuration
+global:
+  security:
+    allowInsecureImages: true
+
 nameOverride: ""
 fullnameOverride: ""
 nodeSelector: {}
