--- a/processor/pyproject.toml
+++ b/processor/pyproject.toml
@@ -23,6 +23,10 @@ dependencies = [
     "pika>=1.3.2",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.0.0",
+    "rich>=13.0.0",
+    "prompt-toolkit>=3.0.0",
+    "unidiff>=0.7.0",
+    "httpx>=0.27.0",
 ]
 
 [project.scripts]
